<?xml version="1.0" encoding="utf-8"?>
<!-- 
/* File: strings.xml
 * Due: 3/6/13
 * Author: Kevin Almanza
 * Course: CSCI 3033
 * Description: This file contains all the strings used in the application
 */
 -->
<resources>

    <string name="app_name">Almanza4</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="lbl_weight">Weight</string>
    <string name="lbl_Height">Height</string>
    <string name="btn_calculate">Calculate</string>
    <string name="lbl_your_bmi">Your BMI is:</string>
    <string name="hint_weight">Your Weight(lbs)</string>
    <string name="hint_height">Your Height(inches)</string>
    <string name="lbl_instructions">To Use:\n1. Enter your weight to the nearest pound in the first box.\n2. Enter your height to the nearest inch in the second box\n3. Hit Calculate</string>
    <string name="lbl_bmi_info">BMI VALUES:\nUnderweight: less than 18.5\nNormal: between 18.5 and 24.9\nOverweight: between 25 and 29.9\nObese: 30 or greater</string>
    <string name="error_zeroed_entries">Zero is not a valid height or weight</string>
	<string name="error_other">Incorrect Entry in either field.  Only enter whole numbers above 0</string>
	<string name="error_empty_entries">Missing an entry in one of the two fields</string>
</resources>