<!-- 
/* activity_main.xml
 * Due: 3/6/13
 * Author: Kevin Almanza
 * Course: CSCI 3033
 * Description: This file is the layout specification to be used in the main activity
 */

 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fadingEdge="none" >

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_background"
    tools:context=".MainActivity" >

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lbl_intructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/lbl_instructions"
            android:textColor="@color/text_color"
            android:textStyle="normal" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/lbl_weight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/lbl_weight"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_weight"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            android:id="@+id/lbl_height"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/lbl_Height"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_height"
            android:inputType="number" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/btn_calculate"
            android:textColor="@android:color/primary_text_light"
            android:textSize="21sp"
            android:typeface="monospace" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            android:id="@+id/lbl_result"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/lbl_your_bmi"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <EditText
            android:id="@+id/txt_bmi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="numberDecimal"
            android:visibility="visible" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/lbl_bmi_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical"
            android:text="@string/lbl_bmi_info"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />

    </TableRow>

</TableLayout>
</ScrollView>